<resources>
    <string name="app_name">SOLAR DECATHLON HOUSE</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">LOGIN</string>
    <string name="text_register">REGISTER</string>
    <string name="error_message_name">Please Enter Name</string>
    <string name="error_message_email">Please Enter Valid Email</string>
    <string name="error_message_password">Please Enter Password</string>
    <string name="error_message_filled_email">Please Enter the Email</string>
    <string name="error_message_filled_password">Please Enter the Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">New User? Register Here</string>
    <string name="text_already_member">Already a member? Login Here.</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Provided Email/Password Combination does not match our records.</string>
    <string name="text_edit_user_password">Forgot Password?</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_change_successful">Password Change Successful</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_title">Solar Decathlon House</string>
    <string name="fahrenheit">°F</string>
    <string name="refresh">Refresh</string>
    <string name="calculate">Calculate</string>
    <string name="powerUnit">kWh</string>
    <string name="waterUnit">Gallons</string>
    <string name="maximum">Maximum</string>
    <string name="minimum">Minimum</string>
    <string name="instantaneous">Instantaneous</string>
    <string name="roof">Roof</string>
    <string name="watertank">Water Tank</string>
    <string name="watersolarcollector">Water Solar Collector</string>
    <string name="northwall">North Wall</string>
    <string name="southwall">South Wall</string>
    <string name="exteriortemperature">Exterior Temperature</string>
    <string name="interiortemperature">Interior Temperature</string>
    <string name="solarpanel">Solar Panel</string>
    <string name="refrigerator">Refrigerator</string>

    <string name="totalpowerconsumed">Total Power Consumed</string>
    <string name="currentpowerconsumed">Current Power Consumed</string>
    <string name="powerconsumed">Power Consumed</string>
    <string name="totalpowerproduced">Total Power Produced</string>
    <string name="currentpowerproduced">Current Power Produced</string>
    <string name="powerproduced">Power Produced</string>
    <string name="kitchenoutlet">Kitchen Outlet</string>
    <string name="radiantfloorpump">Radiant Floor Pump</string>
    <string name="airconditioner">Air Conditioner</string>
    <string name="waterheater">Water Heater</string>
    <string name="lightingsensor">Lighting Sensor</string>

    <string name="sensorusage">Total Water Usage</string>
    <string name="sensor1usage">Total Water Usage - Sensor 1</string>
    <string name="sensor2usage">Total Water Usage - Sensor 2</string>

    <string name="humidity">Humidity</string>

    <string name="r_value_auto">R-Value (h*[ft^2]*F/Btu)</string>
    <string name="ambient_temperature_auto">Ambient Temperature (°F)</string>
    <string name="internal_temperature_auto">Internal Temperature (°F)</string>
    <string name="q1_auto">q1 (Btu/h*[ft^2])</string>
    <string name="q2_auto">q2 (Btu/hr)</string>
    <string name="q3_auto">q3 (kW)</string>
    <string name="q4_auto">q4 ($/kWh)</string>
    <string name="q4_auto_one_hour"> Last One Hour ($/kWh)</string>
    <string name="length_auto">Length (ft)</string>
    <string name="width_auto">Width (ft)</string>

    <string name="r_value_manual">R-Value - [h*[ft^2]*F/Btu]</string>
    <string name="ambient_temperature_manual">Ambient Temperature - [°F]</string>
    <string name="internal_temperature_manual">Internal Temperature - [°F]</string>
    <string name="q1_manual">q1 - [Btu/h*[ft^2]]</string>
    <string name="q2_manual">q2 - [Btu/hr]</string>
    <string name="q3_manual">q3 - [kW]</string>
    <string name="q4_manual">q4 - [$/kWh]</string>
    <string name="length_manual">Length - [ft]</string>
    <string name="width_manual">Width - [ft]</string>

    <string name="r_value_unit">h*[ft^2]*F/Btu</string>
    <string name="ambient_temperature_unit">°F</string>
    <string name="internal_temperature_unit">°F</string>
    <string name="q1_unit">Btu/h*[ft^2]</string>
    <string name="q2_unit">Btu/hr</string>
    <string name="q3_unit">kW</string>
    <string name="q4_unit">$/kWh</string>
    <string name="length_unit">ft</string>
    <string name="width_unit">ft</string>

</resources>
