<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/dark_green_background"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".WaterFlow">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <Button
                android:id="@+id/one_for_all"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/digital_numericals_heavy"
                android:scaleType="fitCenter"
                android:text="@string/refresh"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/water_flow_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/water_flow_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/digital_numericals_heavy"
                android:text="@string/sensorusage"
                android:textAlignment="center"
                android:textColor="@color/colorOrange"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/one_for_all" />

            <TextView
                android:id="@+id/water_flow_total_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/digital_numericals_heavy"
                android:text="@string/waterUnit"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/water_flow_total" />

            <TextView
                android:id="@+id/water_flow_sensor1_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/digital_numericals_heavy"
                android:text="@string/sensor1usage"
                android:textAlignment="center"
                android:textColor="@color/colorOrange"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/water_flow_total_value" />

            <TextView
                android:id="@+id/water_flow_sensor1_total_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/digital_numericals_heavy"
                android:text="@string/waterUnit"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/water_flow_sensor1_total" />

            <TextView
                android:id="@+id/water_flow_sensor2_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/digital_numericals_heavy"
                android:text="@string/sensor2usage"
                android:textAlignment="center"
                android:textColor="@color/colorOrange"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/water_flow_sensor1_total_value" />

            <TextView
                android:id="@+id/water_flow_sensor2_total_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/digital_numericals_heavy"
                android:text="@string/waterUnit"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/water_flow_sensor2_total" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>